<resources>
    <string name="app_name">NewsFeed</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_register_name">Name</string>
    <string name="prompt_register_lastname">Lastname</string>
    <string name="prompt_confirm_pass">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Registration</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_reset_pass">Reset Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_empty">Fill the field</string>
    <string name="error_valid">Not Valid</string>
    <string name="error_valid_pass">Length 8 to 16</string>
    <string name="error_confirm">Write true password to confirm</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="back">BACK</string>
    <string name="submit">SUBMIT</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="firebase_legacy_server_key">AIzaSyCUmcJmLwXXH8yAEhIxajiIEQmCdPibaFU</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">yWSW8a49Z5BTedVFJfVdfCXaRM3WD3aOwG84K6f1</string>
    <string name="back4app_client_key">EBag6rvv0rl6tjA4Z52fQ5uyNocTE94SVkwxb3rJ</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_user">Home</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
