<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/background1"
    android:gravity="top|center"
    android:orientation="vertical"
    android:padding="20dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@mipmap/news_img" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/registered_emailid"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/registered_emailid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorPrimary"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/backToLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"

            android:padding="5dp"
            android:text="@string/back"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgot_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:padding="5dp"
            android:text="@string/submit"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>
